[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "doorget"
dynamic = ["version"]
authors = [
  { name="Fabien Dieulle", email="fabien.dieull@hotmail.fr" },
]
description = "Memoize package supporting data dependencies"
readme = "README.md"
keywords = ["memoize", "memoization", "doorget"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fdieulle/doorget"
Issues = "https://github.com/fdieulle/doorget/issues"